--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -14,7 +14,7 @@
 	
 	<div class="bar-shadow"></div>
 	<ion-content scroll='true'>
-<progress  max="100" value="15"></progress>
+<!-- <progress  max="100" value="15"></progress> -->
 		<div class = "list item-list">
 			<div class="item item-divider ">
 			个人基本信息
