--- a/www/partials/addpatient/ModuleInfoListDetail.html
+++ b/www/partials/addpatient/ModuleInfoListDetail.html
@@ -10,15 +10,26 @@
       <ion-list>
         <div ng-repeat='ModuleInfoListDetail in ModuleInfoList'>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='YesNoType'">
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <div class="input-label">
+              {{ModuleInfoListDetail.ItemName}} :
+            </div>
+            <select ng-options="YesNoTypeValue.Name for YesNoTypeValue in YesNoType" ng-model="ModuleInfoListDetail.Description">
+              <option value="">请选择</option>
+            </select>
+          </label>
+            <!-- <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
             <select style="width:65%" ng-options="YesNoTypeValue.Name for YesNoTypeValue in YesNoType" ng-model="ModuleInfoListDetail.Description">
               <option value="">请选择</option>
-              <!-- <option ng-repeat="YesNoType in YesNoType">{{YesNoType.Name}}</option> -->
-            </select>
+            </select> -->
             <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px"  ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstHypertensionDrug'">
-          <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              </label>
             <div class="row">
               <div class="col-33" style="padding-left:5px" ng-click="addhyperdrug()"><b ><i class="ion-plus-circled" style="color: #417D9A"></i> 添加一条 </b></div>
               <div class="col-33" ng-click="deletehyperdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
@@ -42,44 +53,63 @@
               </select>
 
             </div>
+
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstDiabetesDrug'">
-          <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <div class="row">
-              <div class="col-33" style="padding-left:5px" ng-click="adddiabetesdrug()"><b ><i class="ion-plus-circled" style="color: #417D9A"></i> 添加一条 </b></div>
-              <div class="col-33" ng-click="deletediabetesdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
-            </div>          
-   <!--          <div>
-              <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-              <a class="button button-clear button-positive" ng-click="adddiabetesdrug()">添加</a>
-              <a class="button button-clear button-positive" ng-click="deletediabetesdrug()">删除</a>
-            </div> -->
-            <div class="row" ng-repeat="Diabetesdrug in DiabetesDrugArray">
-              <select ng-options="DiabetesDrugType.Name for DiabetesDrugType in Diabetesdrug.Type"  ng-change="getDiabetesDrugNameByType(DiabetesDrugData[$index].Type, $index)" ng-model="DiabetesDrugData[$index].Type">
-                <option selected value="">请选择</option>
-                <!-- <option ng-repeat="HyperTensionDrugTypeName in HyperTensionDrugTypeName">{{HyperTensionDrugTypeName.Name}}</option> -->
-              </select>
-              <select ng-options="DiabetesDrugName.Name for DiabetesDrugName in Diabetesdrug.Name" ng-model="DiabetesDrugData[$index].Name">
-                <option selected value="">请选择</option>
-                <!-- <option ng-repeat="HyperTensionDrugName in HyperTensionDrugName">{{HyperTensionDrugName.Name}}</option> -->
-              </select>
-            </div>
+            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              </label>
+              <div class="row">
+                <div class="col-33" style="padding-left:5px" ng-click="adddiabetesdrug()"><b ><i class="ion-plus-circled" style="color: #417D9A"></i> 添加一条 </b></div>
+                <div class="col-33" ng-click="deletediabetesdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
+              </div>          
+     <!--          <div>
+                <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+                <a class="button button-clear button-positive" ng-click="adddiabetesdrug()">添加</a>
+                <a class="button button-clear button-positive" ng-click="deletediabetesdrug()">删除</a>
+              </div> -->
+              <div class="row" ng-repeat="Diabetesdrug in DiabetesDrugArray">
+                <select ng-options="DiabetesDrugType.Name for DiabetesDrugType in Diabetesdrug.Type"  ng-change="getDiabetesDrugNameByType(DiabetesDrugData[$index].Type, $index)" ng-model="DiabetesDrugData[$index].Type">
+                  <option selected value="">请选择</option>
+                  <!-- <option ng-repeat="HyperTensionDrugTypeName in HyperTensionDrugTypeName">{{HyperTensionDrugTypeName.Name}}</option> -->
+                </select>
+                <select ng-options="DiabetesDrugName.Name for DiabetesDrugName in Diabetesdrug.Name" ng-model="DiabetesDrugData[$index].Name">
+                  <option selected value="">请选择</option>
+                  <!-- <option ng-repeat="HyperTensionDrugName in HyperTensionDrugName">{{HyperTensionDrugName.Name}}</option> -->
+                </select>
+              </div>
+            
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory==''">
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <input style="width:100%" placeholder="填写信息"  type="text" ng-model="ModuleInfoListDetail.Description">
+            <label class="item item-input item-stacked-label">
+              <span class="input-label" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</span>
+              <input type="text" placeholder="填写信息" ng-model="ModuleInfoListDetail.Description">
+            </label>
+            <!-- <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <input style="width:100%" placeholder="填写信息"  type="text" ng-model="ModuleInfoListDetail.Description"> -->
             <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DietHabbit'">
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <p ng-click="addDietHabbit()">{{DietHabbitValue}}</p>
+            <label class="item item-input item-stacked-label" ng-click="addDietHabbit()">
+              <span style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</span>
+              <p >{{DietHabbitValue}}</p>
+            </label>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DrinkFrequency'">
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              <select ng-options="DrinkFrequency.Name for DrinkFrequency in DrinkFrequency" ng-model="ModuleInfoListDetail.Description">
+                <option selected value="">请选择</option>
+              </select>
+            </label>
+            <!-- <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
             <select style="width:65%" ng-options="DrinkFrequency.Name for DrinkFrequency in DrinkFrequency" ng-model="ModuleInfoListDetail.Description">
               <option selected value="">请选择</option>
-              <!-- <option ng-repeat="DrinkFrequency in DrinkFrequency">{{DrinkFrequency.Name}}</option> -->
-            </select>
+            </select> -->
             <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
           </ion-item>
         </div>
