--- a/www/partials/managepatient/ModuleInfoListDetail.html
+++ b/www/partials/managepatient/ModuleInfoListDetail.html
@@ -11,17 +11,14 @@
       <ion-list>
         <div ng-repeat='ModuleInfoListDetail in ModuleInfoList'>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='YesNoType'">
-           
-           
-                <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-        
-           
-                <select style="width:65%" ng-options="YesNoTypeValue.Name for YesNoTypeValue in YesNoType" ng-model="ModuleInfoListDetail.Description">
-                  <option value="">请选择</option>
-                  <!-- <option ng-repeat="YesNoType in YesNoType">{{YesNoType.Name}}</option> -->
-                </select>              
-    
-        
+           <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <div class="input-label">
+              {{ModuleInfoListDetail.ItemName}} :
+            </div>
+            <select ng-options="YesNoTypeValue.Name for YesNoTypeValue in YesNoType" ng-model="ModuleInfoListDetail.Description">
+              <option value="">请选择</option>
+            </select>
+          </label>
             <!--<h2>{{ModuleInfoListDetail.ItemName}} :</h2>
             <select ng-options="YesNoTypeValue.Name for YesNoTypeValue in YesNoType" ng-model="ModuleInfoListDetail.Description">
               <option value="">请选择</option>
@@ -29,7 +26,11 @@
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstHypertensionDrug'">
             <!-- <div> -->
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              </label>
             <div class="row">
               <div class="col-33" style="padding-left:5px" ng-click="addhyperdrug()"><b ><i class="ion-plus-circled" style="color: #689F38"></i> 添加一条 </b></div>
               <div class="col-33" ng-click="deletehyperdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
@@ -51,8 +52,11 @@
             </div>          
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstDiabetesDrug'">
-            <!-- <div> -->
-            <h2 style="background-color: rgba(128,128,128,0.25);padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
+            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              </label>
             <div class="row">
               <div class="col-33" style="padding-left:5px" ng-click="adddiabetesdrug()"><b ><i class="ion-plus-circled" style="color: #689F38"></i> 添加一条 </b></div>
               <div class="col-33" ng-click="deletediabetesdrug()"><b> <i class="ion-trash-a" style="color: #EF473A"></i> 删除最后一条</b></div>
@@ -72,21 +76,26 @@
             </div>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory==''">
-            <h2 style="background-color: #F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <input style="width:100%" placeholder="填写信息" type="text" ng-model="ModuleInfoListDetail.Description">
-            <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
+            <label class="item item-input item-stacked-label">
+              <span class="input-label" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</span>
+              <input type="text" placeholder="填写信息" ng-model="ModuleInfoListDetail.Description">
+            </label>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DietHabbit'">
-            <h2 style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <p ng-click="addDietHabbit()">{{DietHabbitValue}}</p>
+            <label class="item item-input item-stacked-label" ng-click="addDietHabbit()">
+              <span style="background-color:#F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</span>
+              <p >{{DietHabbitValue}}</p>
+            </label>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DrinkFrequency'">
-            <h2 style="background-color: #F1F1F1;padding:3px 0px 2px 0px">{{ModuleInfoListDetail.ItemName}} :</h2>
-            <select style="width:65%" ng-options="DrinkFrequency.Name for DrinkFrequency in DrinkFrequency" ng-model="ModuleInfoListDetail.Description">
-              <option selected value="">请选择</option>
-              <!-- <option ng-repeat="DrinkFrequency in DrinkFrequency">{{DrinkFrequency.Name}}</option> -->
-            </select>
-            <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
+            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+              <div class="input-label">
+                {{ModuleInfoListDetail.ItemName}} :
+              </div>
+              <select ng-options="DrinkFrequency.Name for DrinkFrequency in DrinkFrequency" ng-model="ModuleInfoListDetail.Description">
+                <option selected value="">请选择</option>
+              </select>
+            </label>
           </ion-item>
         </div>
       </ion-list>
