--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -10,7 +10,7 @@
     </ion-nav-buttons>
   </ion-nav-bar>
     <ion-content class="padding" start-y="120">
-        <div style="position:relative;bottom:{{Dialog.SMSbottom}}">
+        <div style="position:relative;bottom:{{Dialog.SMSbottom}};top:20px">
             <ion-refresher pulling-text="下拉加载更多。。。" spinner='ripple' refreshing-text="努力加载中" on-refresh="DisplayMore()">
             </ion-refresher>
             <div ng-repeat="item in Dialog.DisplayOnes">
