添加里同步之后刷新，修改了每个modal的样式
Signed-off-by: hsnowman <824235172@qq.com>

--- a/www/partials/addpatient/DiagnosisInfo.html
+++ b/www/partials/addpatient/DiagnosisInfo.html
@@ -14,8 +14,8 @@
     <ion-item ng-repeat='item in Diagnosisinfo' >
 
 
-  <h2>时间:{{item.RecordDate}}</h2>
-      <h2>{{item.DiagnosisTypeName}}:{{item.DiagnosisName}}</h2>
+  <h2 style="white-space:pre-wrap">时间:{{item.RecordDate}}</h2>
+      <h2 style="white-space:pre-wrap">{{item.DiagnosisTypeName}}:{{item.DiagnosisName}}</h2>
 
     
     </ion-item>
