--- a/www/partials/addpatient/druginfo.html
+++ b/www/partials/addpatient/druginfo.html
@@ -11,24 +11,26 @@
 	<ion-item  ng-if=show>
 		<h2>无用药数据</h2>
 	</ion-item>
-<ion-item ng-repeat='item in DrugRecordinfo'  >
-<div class="row">
-<h2 class="col col-50">医嘱类型：{{item.RepeatIndicator}}</h2>
-<h2 class="col col-50">药嘱名称：{{item.OrderContent}} </h2>
-</div>
+<ion-item ng-repeat='item in DrugRecordinfo' >
+<h2 class="col-100" style="white-space:pre-wrap">开始时间：{{item.StartDateTime}}</h2>
+
+<h2 class="col-100" style="white-space:pre-wrap">结束时间：{{item.StopDateTime}} </h2>
+<h2 class="col-100" style="white-space:pre-wrap">医嘱类型：{{item.RepeatIndicator}}</h2>
 
 
-<div class="row">
-<h2 class="col col-50">一次使用剂量：{{item.Dosage}}{{item.DosageUnits}}</h2>
-<h2 class="col col-50">给药途径：{{item.Administration}} </h2>
-</div>
-<div class="row">
-<h2 class="col col-50">开始时间：{{item.StartDateTime}}</h2>
-<h2 class="col col-50">结束时间：{{item.StopDateTime}} </h2>
-</div>
-<div class="row">
-<h2 class="col col-50">给药频率：{{item.Frequency}} </h2>
-</div>
+<h2 class="col-100" style="white-space:pre-wrap">医嘱名称：{{item.OrderContent}} </h2>
+
+
+
+
+<h2 class="col-100" style="white-space:pre-wrap">剂量：{{item.Dosage}}{{item.DosageUnits}}</h2>
+
+<h2 class="col-100" style="white-space:pre-wrap">给药途径：{{item.Administration}} </h2>
+
+
+
+<h2 class="col-100" style="white-space:pre-wrap">给药频率：{{item.Frequency}} </h2>
+
 </ion-item>
 
 
