--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -100,10 +100,10 @@ Dept
         </select>
       </a> -->
 
-      <a href="#" class="item">
+ <!--      <a href="#" class="item">
         ID No.
         <span class="badge badge-balanced">{{userInfo.BasicInfo.id}}</span>
-      </a>
+      </a> -->
       <div class="item item-divider">详细信息</div>
     
 
@@ -114,8 +114,8 @@ Dept
           工作单位
         </div>
         <select ng-model="userInfo.DtInfo.unitname">
-          <option>海军总医院 </option>
-          <option>其他 </option>
+          <option>海军总医院</option>
+          <option>其他</option>
         </select>
       </label>
 
@@ -125,11 +125,11 @@ Dept
           职务
         </div>
         <select ng-model="userInfo.DtInfo.jobTitle">
-          <option>医士 </option>
-          <option>住院医师  </option>
-          <option>主治医师  </option>
-          <option>副主任医师 </option>
-          <option>主任医师 </option>
+          <option>医士</option>
+          <option>住院医师</option>
+          <option>主治医师</option>
+          <option>副主任医师</option>
+          <option>主任医师</option>
         </select>
       </label>
 
@@ -139,21 +139,21 @@ Dept
           科室
         </div>
         <select ng-model="userInfo.DtInfo.dept">
-          <option>心内科门诊 </option>
-          <option>内分泌科 </option>
+          <option>心内科门诊</option>
+          <option>内分泌科</option>
         </select>
       </label> 
 
       <label class="item item-icon-left item-input-right item-select">
         <i class="icon ion-arrow-graph-up-left" ></i>
         <div class="input-label">
-          等级
+          职级
         </div>
         <select ng-model="userInfo.DtInfo.level">
-          <option>初级 </option>
-          <option>中级 </option>
-          <option>正高 </option>
-          <option>副高 </option>
+          <option>初级</option>
+          <option>中级</option>
+          <option>正高</option>
+          <option>副高</option>
         </select>
       </label>                              
 <!--  <a href="#" class="item item-icon-left item-icon-right"  ng-click ="onClickEditUnitName()">
