--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -1,4 +1,4 @@
-<ion-view title="计划情况">
+<ion-view cache-view="false" title="计划情况">
 <ion-nav-bar class="bar-positive">
     <ion-nav-buttons side="left">
       <button class="button icon button-icon ion-android-home" ng-click="backtocoach()"></button>
