--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -1,4 +1,4 @@
-<ion-view title="基本信息">
+<ion-view cache-view="false" title="基本信息">
 	
 	<ion-nav-bar class="bar-positive nav-title-slide-ios7">
 		<ion-nav-back-button class="button-icon ion-arrow-left-c"></ion-nav-back-button>
