--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -21,8 +21,8 @@
       性别
     </div>
     <select ng-model="userInfo.BasicInfo.gender">
-      <option>男 </option>
-      <option>女 </option>
+      <option>男</option>
+      <option>女</option>
     </select>
   </label>
 
@@ -47,9 +47,10 @@
       工作单位
       </div>
       <select ng-model="userInfo.DtInfo.unitname">
-        <option> 海军总医院 </option>
-        <option> 浙医二院   </option>
-        <option> 浙医一院   </option>
+        <option>海军总医院</option>
+        <option>其他</option>
+<!--         <option>浙医二院</option>
+        <option>浙医一院</option> -->
       </select>
 
     </label>
@@ -62,8 +63,8 @@
       科室
       </div>
       <select ng-model="userInfo.DtInfo.dept">
-        <option> 心内科门诊 </option>
-        <option> 内分泌科 </option>
+        <option>心内科门诊</option>
+        <option>内分泌科</option>
       </select>
 
     </label>
@@ -74,11 +75,11 @@
       职务
       </div>
       <select ng-model="userInfo.DtInfo.jobTitle">
-        <option> 医士         </option>
-        <option> 住院医师     </option>
-        <option> 主治医师     </option>
-        <option> 副主任医师    </option>
-        <option> 主任医师     </option>
+        <option>医士</option>
+        <option>住院医师</option>
+        <option>主治医师</option>
+        <option>副主任医师</option>
+        <option>主任医师</option>
       </select>
 
     </label>
@@ -86,14 +87,14 @@
     <label class="item item-input item-select" >
 
       <div class="input-label">
-      等级
+      职级
       </div>
       <select ng-model="userInfo.DtInfo.level">
         
-        <option> 副高 </option>
-        <option> 正高 </option>
-        <option> 中级 </option>
-        <option> 初级 </option>
+        <option>副高</option>
+        <option>正高</option>
+        <option>中级</option>
+        <option>初级</option>
       </select>
 
     </label>
