--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -26,16 +26,17 @@
     </div>
     <div class = "item item-divider">        
     </div>     
-    <div class ="item item-icon-left" >
-      <i class="icon ion-android-contact"></i>
-      {{userInfo.DtInfo.dept}}
-    </div>
+
     <div class ="item item-icon-left">
-      <i class="icon ion-android-contact"></i>
+      <i class="icon ion-person"></i>
       {{userInfo.DtInfo.jobTitle}}
-    </div>        
+    </div>       
+    <div class ="item item-icon-left" >
+      <i class="icon ion-ios-pulse-strong"></i>
+      {{userInfo.DtInfo.dept}}
+    </div>     
     <div class ="item item-icon-left">
-      <i class="icon ion-android-contact"></i>
+      <i class="icon ion-arrow-graph-up-left"></i>
       {{userInfo.DtInfo.level}}
     </div>
   </div>
