--- a/www/partials/addpatient/risk.html
+++ b/www/partials/addpatient/risk.html
@@ -5,7 +5,7 @@
   <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
   <ion-nav-buttons side="right">
-    <button class="button button-icon ion-help-circled " ng-click="onClickEvaluation()">新增</button>
+    <button class="button button-icon ion-plus " ng-click="onClickEvaluation()"></button>
   </ion-nav-buttons>
 </ion-nav-bar>
 
@@ -45,7 +45,7 @@
       item-icon-right 
       item-text-wrap"  href="#/addpatient/risk/{{item.num}}" ng-hide = " (!item.M1show)&& (!item.M2show) ">
       <!-- 改动url -->
-      <img src="http://placehold.it/300/CCE8D6?text={{item.num}}"
+      <img src="img/male.png"
         alt="{{ item.num }} Photo">
 <!--      <h2>{{item.SortNo}}</h2> -->
       <div class="row">
