--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -27,7 +27,7 @@
   </label>
 
 
-  <a class="item">
+  <a class="item" ng-if="loadingDone">
         <ionic-datepicker input-obj="datepickerObject">
         <div>
         <span>生日</span>
@@ -101,13 +101,12 @@
 </ion-list>
 
 <!-- <div class="item item-avatar"> -->
-<!-- <div class="card" height=100; width =100> -->
+<div class="padding" >
 
-  <div style ="height=100; width =100; display:block; text-align:center;">
-    <img ng-show = "imgURI != undefined"  ng-click="onClickCamera($event)" ng-src="{{imgURI}}"  >
-    <img ng-show = "imgURI == undefined" ng-click="onClickCamera($event)" ng-src='http://placehold.it/300/CCE8D6?text="点击此处拍照"' width = 100 height =100>
+  <div class style ="height=100; width =100; display:block; text-align:center;">
+    <img ng-click="onClickCamera($event)" ng-src="{{imgURI}}" width = 200 height = 200 >
   </div>
-<!-- </div> -->
+</div>
 
 
 <!--  {{"http://placehold.it/300?text=placehold.it+fuck!"}}
@@ -131,7 +130,7 @@
 </div>
 <div class = "padding">
    <button class="button button-block button-positive icon ion-camera" ng-click="onClickCamera($event)">
-        上传照片
+        上传认证照片
   </button>
 </div>
 
