--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -8,7 +8,7 @@
 <!--     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button -->>
   <ion-nav-buttons side="right">
-    <button class="button button-icon ion-help-circled " ng-click="onClickEvaluation1()">新增</button>
+    <button class="button button-icon ion-plus " ng-click="onClickEvaluation1()"></button>
   </ion-nav-buttons>
 </ion-nav-bar>
 <!-- <ion-header-bar>
@@ -47,7 +47,7 @@
   <ion-content class="has-subheader">
     <ion-refresher on-refresh="doRefresh()">
     </ion-refresher>
-  	
+    
     <ion-list show-delete="data.showDelete" show-reorder="data.showReorder" >
 
       <ion-item ng-class="{'star': item.star}"  
@@ -56,9 +56,9 @@
       item-icon-right 
       item-text-wrap"  href="#/Independent/risk/{{item.num}}" ng-hide = " (!item.M1show)&& (!item.M2show) ">
       <!-- 改动url -->
-      <img src="http://placehold.it/300/CCE8D6?text={{item.num}}"
+      <img src="img/male.png"
         alt="{{ item.SortNo }} Photo">
-<!--   		<h2>{{item.SortNo}}</h2> -->
+<!--      <h2>{{item.SortNo}}</h2> -->
       <div class="row">
         <div class="col" ng-show =" item.M1show ">
             <h2>{{item.M1.AssessmentName}}</h2>
@@ -66,7 +66,7 @@
             <h4>{{item.M1.SBP}} / {{item.M1.DBP}} mmHg </h4>
             <!-- <p> {{item.M1.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
         </div>
-    		<div class="col" ng-show =" item.M2show">
+        <div class="col" ng-show =" item.M2show">
             <h2>{{item.M2.AssessmentName}}</h2>
             <h3>{{item.M2.AssessmentTime}}</h3>
             <h4>{{item.M2.Period}} : {{item.M2.Glucose}} mmol/L </h4>
@@ -90,9 +90,9 @@
       <ion-reorder-button class="ion-navicon"
         on-reorder="moveItem(item, $fromIndex, $toIndex)">
       </ion-reorder-button> -->
-  		
+      
       </ion-item>
-  	</ion-list>
+    </ion-list>
     <button ng-click="BacktoManage()" class="button button-block button-positive">完成</button>
   </ion-content>
 </ion-pane>
