--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -17,7 +17,7 @@
   </ion-nav-bar>
   <ion-content has-bouncing="false">
     <div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
-    <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}岁</h3>
+    <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
   </div>
     <ion-list>    
       <ion-item  ng-repeat='Module in ModuleInfo' href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
